# exit-gate

./: .gitignore  ARCHITECTURE.md  BUILD_STATUS.md  BUILD_SUCCESS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  build.sh  fix-install.sh  install.sh  package.sh  uninstall.sh
config/: config.toml
daemon/: Cargo.toml  build.rs
daemon/src/: config.rs  db.rs  ebpf.rs  ipc.rs  main.rs  process.rs  rule.rs
ebpf/: Makefile  network_monitor.bpf.c
electron/: package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
electron/src/: App.tsx  index.html  main.ts  preload.ts
electron/src/components/: ConnectionHistory.tsx  ConnectionPrompt.tsx  Dashboard.tsx  RulesManager.tsx
electron/src/types/: index.ts
systemd/: exit-gate-minimal.service  exit-gate.service
