[package]
name = "exit-gate-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Exit Gate Contributors"]
license = "MIT"
description = "eBPF-based application firewall daemon for Linux"

[dependencies]
# eBPF loading - optional until fully implemented
# libbpf-rs = { version = "0.22", optional = true }
# libbpf-sys = { version = "1.3", optional = true }
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
nix = { version = "0.27", features = ["user", "process", "fs"] }
procfs = "0.16"
maxminddb = "0.24"
ipnetwork = "0.20"
regex = "1.10"
libc = "0.2"
plain = "0.2"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
